PostGIS 3.4.5dev
xxxx/xx/xx

PostgreSQL 12-17 required. GEOS 3.6+ required but GEOS 3.12+ to take advantage of all features.
Proj 6.1+ required.

* Bug Fixes *

  - #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)
  - #5936, [topology] Do script-based upgrade in a single transaction (Sandro Santilli)
  - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
  - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
  - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
  - Do not complain about illegal option when calling shp2pgsql -?
  - #5564, BRIN crash fix and support for parallel in PG17+
          (Paul Ramsey, Regina Obe)
  - #5876, Fix ST_AddPoint with empty point argument
  - #5874, Line substring returns wrong answer (Paul Ramsey)
  - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
  - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
  - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
  - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
  - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
  - #5905, Crash on deeply nested geometries (Paul Ramsey)
  - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
  - #5917, ST_Relate becomes unresponsive (Paul Ramsey)


PostGIS 3.4.4
2024/12/22

PostgreSQL 12-17 required. GEOS 3.6+ required but GEOS 3.12+ to take advantage of all features.
Proj 6.1+ required.

* Bug Fixes *

  - [topology] Quote-protect output paths of pgtopo_export (Sandro Santilli)
  - #5785, [raster] ST_MapAlgebra segfaults when expression references
           a supernumerary rast argument (Dian M Fay)
  - #5787, [topology] Check that ST_ChangeEdgeGeom doesn't change winding of rings
           (Sandro Santilli)
  - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology
          (Björn Harrtell)